<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_feed"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_feed"/>

    <item
            android:id="@+id/navigation_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_notifications"/>

    <item
            android:id="@+id/navigation_favourite"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:iconTint="@android:color/black"
            android:title="@string/title_fav"/>

    <item
            android:id="@+id/navigation_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/title_settings"/>

</menu>
