<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ThemeChangeActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/actionBarColor"
                app:title="@string/title_color"
                app:titleTextColor="@color/colorActionBarText" />

    </com.google.android.material.appbar.AppBarLayout>

    <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout3">

        <RadioButton
                android:id="@+id/theme_light"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/theme_light" />

        <RadioButton
                android:id="@+id/theme_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/theme_dark" />

        <RadioButton
                android:id="@+id/theme_system"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/theme_system" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>