<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/actionBarColor"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/title_post_view"
            app:titleTextColor="@color/colorActionBarText" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <androidx.cardview.widget.CardView

                android:id="@+id/cardBg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="32dp"
                app:cardCornerRadius="7dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/postHeaderBackgroundColor"
                        android:gravity="right"
                        android:orientation="horizontal">

                    <ImageView
                            android:id="@+id/brandIcon"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_margin="8dp"
                            app:srcCompat="@drawable/ic_vk_blue_logo" />
                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <ImageView
                            android:id="@+id/groupIcon"
                            android:layout_width="61dp"
                            android:layout_height="63dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="16dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/com_facebook_profile_picture_blank_square" />

                    <TextView
                            android:id="@+id/title_"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="36dp"
                            android:layout_marginEnd="16dp"
                            android:text="TextView"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toEndOf="@+id/groupIcon"
                            app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                            android:id="@+id/text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="16dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="1.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/groupIcon" />

                    <com.synnapps.carouselview.CarouselView
                            android:id="@+id/carousel"
                            android:layout_width="370dp"
                            android:layout_height="370dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="16dp"
                            app:autoPlay="false"
                            app:fillColor="#FFFFFFFF"
                            app:indicatorMarginVertical="4dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/text"
                            app:pageColor="#00000000"
                            app:radius="6dp"
                            app:strokeColor="#FF777777"
                            app:strokeWidth="1dp" />

                    <TextView
                            android:id="@+id/time"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginEnd="16dp"
                            android:textSize="12sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/groupIcon"
                            app:layout_constraintTop_toBottomOf="@+id/title_" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                        android:id="@+id/add_favourite"
                        style="@style/AppTheme.OutlineButtonIcon"
                        app:icon="@android:drawable/star_off"
                        app:iconGravity="textStart"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:height="32dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/add_to_fav" />

                <Button
                        android:id="@+id/open_source"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="32dp"
                        android:height="32dp"
                        style="@style/AppTheme.OutlineButtonIcon"
                        app:icon="@android:drawable/ic_menu_share"
                        app:iconGravity="textStart"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/open_source" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>